--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
+    "next-auth": "5.0.0-beta.21",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
